--- a/whitesource.config
+++ b/whitesource.config
@@ -128,7 +128,7 @@ go.collectDependenciesAtRuntime=true
 #go.dependencyManager=
 #go.ignoreSourceFiles=true
 #go.glide.ignoreTestPackages=false
-go.gogradle.enableTaskAlias=false
+go.gogradle.enableTaskAlias=true
 
 #ruby.resolveDependencies=false
 #ruby.ignoreSourceFiles=false
